{
  "version": 4,
  "terraform_version": "1.7.1",
  "serial": 60,
  "lineage": "5d6b627f-4149-a8af-22c8-cd5acb165a8e",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "linux-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/networkInterfaces/n01605052-u-vm1-nic-1",
            "internal_domain_name_suffix": "or3whap14yhetocpm402jf3cwh.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "n01605052-u-vm1-ipconfig-1",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/publicIPAddresses/n01605052-u-vm1-pip-1",
                "subnet_id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network_subnet1"
              }
            ],
            "location": "canadacentral",
            "mac_address": "00-0D-3A-84-DB-F4",
            "name": "n01605052-u-vm1-nic-1",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "network-rg",
            "tags": {
              "ContactEmail": "n01605052@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform-Class",
              "Project": "Learning"
            },
            "virtual_machine_id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Compute/virtualMachines/n01605052-u-vm1-2"
          },
          "dependencies": [
            "azurerm_public_ip.linux-pip",
            "azurerm_resource_group.network-rg",
            "azurerm_subnet.network-subnet1",
            "azurerm_virtual_network.network-vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/networkInterfaces/n01605052-u-vm1-nic-2",
            "internal_domain_name_suffix": "or3whap14yhetocpm402jf3cwh.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "n01605052-u-vm1-ipconfig-2",
                "primary": true,
                "private_ip_address": "10.0.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/publicIPAddresses/n01605052-u-vm1-pip-2",
                "subnet_id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network_subnet1"
              }
            ],
            "location": "canadacentral",
            "mac_address": "60-45-BD-5C-E8-F9",
            "name": "n01605052-u-vm1-nic-2",
            "private_ip_address": "10.0.0.5",
            "private_ip_addresses": [
              "10.0.0.5"
            ],
            "resource_group_name": "network-rg",
            "tags": {
              "ContactEmail": "n01605052@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform-Class",
              "Project": "Learning"
            },
            "virtual_machine_id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Compute/virtualMachines/n01605052-u-vm1-1"
          },
          "dependencies": [
            "azurerm_public_ip.linux-pip",
            "azurerm_resource_group.network-rg",
            "azurerm_subnet.network-subnet1",
            "azurerm_virtual_network.network-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "network-nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg1",
            "location": "canadacentral",
            "name": "network-nsg1",
            "resource_group_name": "network-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.network-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "network-nsg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg2",
            "location": "canadacentral",
            "name": "network-nsg2",
            "resource_group_name": "network-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5985",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule2",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.network-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "linux-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "n01605052-u-vm1-pip-1",
            "fqdn": "n01605052-u-vm1-pip-1.canadacentral.cloudapp.azure.com",
            "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/publicIPAddresses/n01605052-u-vm1-pip-1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.151.219.37",
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "n01605052-u-vm1-pip-1",
            "resource_group_name": "network-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ContactEmail": "n01605052@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform-Class",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "azurerm_resource_group.network-rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "n01605052-u-vm1-pip-2",
            "fqdn": "n01605052-u-vm1-pip-2.canadacentral.cloudapp.azure.com",
            "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/publicIPAddresses/n01605052-u-vm1-pip-2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.151.217.38",
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "n01605052-u-vm1-pip-2",
            "resource_group_name": "network-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ContactEmail": "n01605052@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform-Class",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "azurerm_resource_group.network-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "network-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network_subnet1",
            "name": "network_subnet1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "network-rg",
            "virtual_network_name": "network-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.network-rg",
            "azurerm_virtual_network.network-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "network-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network_subnet2",
            "name": "network_subnet2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "network-rg",
            "virtual_network_name": "network-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.network-rg",
            "azurerm_virtual_network.network-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsga1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network_subnet1",
            "network_security_group_id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg1",
            "subnet_id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network_subnet1"
          },
          "dependencies": [
            "azurerm_network_security_group.network-nsg1",
            "azurerm_resource_group.network-rg",
            "azurerm_subnet.network-subnet1",
            "azurerm_virtual_network.network-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsga2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network_subnet2",
            "network_security_group_id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg2",
            "subnet_id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network_subnet2"
          },
          "dependencies": [
            "azurerm_network_security_group.network-nsg2",
            "azurerm_resource_group.network-rg",
            "azurerm_subnet.network-subnet2",
            "azurerm_virtual_network.network-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "network-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "81637b74-f6fb-490e-b84f-67b5c497a2b7",
            "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet",
            "location": "canadacentral",
            "name": "network-vnet",
            "resource_group_name": "network-rg",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network_subnet1",
                "name": "network_subnet1",
                "security_group": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg1"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network_subnet2",
                "name": "network_subnet2",
                "security_group": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg2"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.network-rg"
          ]
        }
      ]
    }
  ]
}